kubernetes/main_yamls/malpredictor-service.yml

apiVersion: v1
kind: Service
metadata:
  name: malware-predictor-service
  labels:
    app: malware-predictor
spec:
  selector:
    app: malware-predictor
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: malware-predictor-deployment
  labels:
    app: malware-predictor
spec:
  replicas: 3
  selector:
    matchLabels:
      app: malware-predictor
  template:
    metadata:
      labels:
        app: malware-predictor
    spec:
      containers:
        - name: malware-predictor-container
          image: docker.io/draellemeister/mal-predict:latest
          ports:
            - containerPort: 5000
