kubernetes/main_yamls/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unified-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 64g
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3030
          - path: /malpredict
            pathType: Prefix
            backend:
              service:
                name: malware-predictor-service
                port:
                  number: 5000
